fixed "the whole not showing things" - Joel Simon

--- a/app/client/style/home.css
+++ b/app/client/style/home.css
@@ -149,6 +149,8 @@ ul {
 .message-pic {
 	float: left;
 	border-radius: 50%;
+	height: 50px;
+	width: 50px;
 }
 
 .message-time {
